@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+  MAHOUT-1467: ClusterClassifier readPolicy leaks file handles (Avi Shinnar, smarthi)
+
   MAHOUT-1466: Cluster visualization fails to execute (ssc)
   
   MAHOUT-1465: Clean up README (akm)
